--- a/main.tex
+++ b/main.tex
@@ -1,3 +1,3 @@
 \text{Dada a função $f\left( x \right) = 3x - 1$ e $g\left( x \right) = x^{2} + x - 1$, determine: 
 } \\ \\
-fof\left( x \right) = f\left( f\left( x \right) \right) = f\left( 3x - 1 \right) = 3 \cdot \left( 3x - 1 \right) - 1 = 9x - 3 - 1 = 9x - 4
+f \circ f\left( x \right) = f\left( f\left( x \right) \right) = f\left( 3x - 1 \right) = 3 \cdot \left( 3x - 1 \right) - 1 = 9x - 3 - 1 = 9x - 4
